update conclusions chapter 8

--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -1,9 +1,9 @@
 \section{Example bunch profiles from Wire Scanner measurements}\label{sec:sps_transverse_beam_profiles}
 
 \textbf{Uncertainties of the Gaussian fit}\\
-Figures~\ref{fig:WS_example_profiles_H_2022} and~\ref{fig:WS_example_profiles_V_2022} show two example horizontal and vertical beam profile as obtained from the SPS.BWS.51637.H and SPS.BWS.41677.V instruments, respectively, during the experiment with $\CC$1 in SPS in 2022. The data points from the IN (OUT) scan are shown with a blue (orange) color. 
+Figures~\ref{fig:WS_example_profiles_H_2022} and~\ref{fig:WS_example_profiles_V_2022} show two example horizontal and vertical beam profiles as obtained from the SPS.BWS.51637.H and SPS.BWS.41677.V instruments, respectively, during the experiment with $\CC$1 in SPS in 2022. The data points from the IN (OUT) scan are shown with a blue (orange) color. 
 
-The measured data points (light blue) are fitted with a four-parameter gaussian (orange) following the procedure discussed in Section~\ref{subsec:sps_ws} to obtain the beam size. Thereafter, the emittance values and their uncertainties are computed from Eqs.~\eqref{eq:emittance_from_WS} and~\eqref{eq:emittance_from_WS_uncertainty} respectively. The results of the fit are also shown in the plots. It is evident that the calculated uncertainties are two orders of magnitude smaller than the corresponding emittance values themselves. This is the case for all acquisitions. However, not all the profiles are displayed in this thesis for practical reasons.
+The measured data points (light blue) are fitted with a four-parameter gaussian (orange) following the procedure discussed in Section~\ref{subsec:sps_ws} to obtain the beam size. Thereafter, the emittance values and their uncertainties are computed from Eqs.~\eqref{eq:emittance_from_WS} and~\eqref{eq:emittance_from_WS_uncertainty} respectively. The results of the fit are also shown in the plots. It is evident that the calculated uncertainties are two orders of magnitude smaller than the corresponding emittance values themselves. This is the case for all acquisitions. %However, not all the profiles are displayed in this thesis for practical reasons.
 
 \begin{figure}[htp]
     \centering
@@ -29,12 +29,12 @@ The measured data points (light blue) are fitted with a four-parameter gaussian 
 
 
 \textbf{IN and OUT scans}\\
-As discussed in Section~\ref{subsec:sps_ws}, during each measurement with the Wire Scanners the beam profile is acquired two times as the wire crosses the beam in the forward direction (IN scan) and then in the reverse direction (OUT scan). For the experiment of 2022, the OUT scan was performed just 200\,ms after the IN scan. However, it was observed that there are significant discrepancies between the measurements from IN and OUT scan, which in some cases reached up to 1\,$\mathrm{\mu m}$. By looking at the acquired profiles, e.g. in Fig.~\ref{fig:WS_example_profiles_H_2022} no apparent reason was found to exclude or not one of the two scans.% An example is shown in Fig.~\ref{fig:WS_example_profiles_H_2022}.
+As discussed in Section~\ref{subsec:sps_ws}, during each measurement with the Wire Scanners the beam profile is acquired two times as the wire crosses the beam in the forward direction (IN scan) and then in the reverse direction (OUT scan). For the experiment of 2022, the OUT scan was performed just 200\,ms after the IN scan. However, it was observed that there are significant discrepancies between the emittance measurements from IN and OUT scan, which in some cases reached up to 1\,$\mathrm{\mu m}$. By looking at the acquired profiles, e.g. in Fig.~\ref{fig:WS_example_profiles_H_2022} no apparent reason was found to exclude or not one of the two scans.% An example is shown in Fig.~\ref{fig:WS_example_profiles_H_2022}.
 
 
 A significant effort was done with the Wire Scanner experts during the emittance growth experiment trying to mitigate this effect without success due to limitations on the hardware of the current instrument that still need to be sorted out. Note that this issue was not observed in the 2018 measurements. A possible explanation is that the wire scanner acquisitions of 2022 provide lower number of points to reconstruct the bunch profiles (compare Figs.~\ref{fig:WS_example_V_profile} against~\ref{fig:WS_example_profiles_V_2022}) increasing the uncertainty of the obtained emittances. The reason behind this, is that between 2018 and 2022 the wire scanners had undergone an upgrade which increased their speed while crossing the bunch. A possible solution to this issue would be to reduce the speed of the wire for the emittance growth experiments in coast mode. This is currently in discussion with the team responsible for the Wire Scanners of the SPS. 
 
-For the the SPS $\CC$ tests in 2022, it was decided that the post-process analysis would be performed taking into account only the IN scan measurements since they appeared to have systematically less fluctuation than in the OUT scan. An example is provided in Fig.~\ref{fig:WS_IN_vs_OUT_2022} where it can be seen that the emittance values obtained from the OUT scan appear to be more fluctuated than the values from the IN scan. In this particular example, this is enhanced in the horizontal plane (blue). It is also clearly visible for the acquisitions during the first half of the coast. Furthermore, the acquisitions from the OUT scans leaded to corruputed profiles more frequenly than the IN scans.
+For the the SPS $\CC$ tests in 2022, it was decided that the post-process analysis would be performed taking into account only the IN scan measurements since they appeared to have systematically less fluctuation than in the OUT scan. An example is provided in Fig.~\ref{fig:WS_IN_vs_OUT_2022} where it can be seen that the emittance values obtained from the OUT scan appear to be more fluctuating than the values from the IN scan. In this particular example, this is enhanced in the horizontal plane (blue). It is also clearly visible for the acquisitions during the first half of the coast. Furthermore, the acquisitions from the OUT scans leaded to corruputed profiles more frequenly than the IN scans.
 
 
 %Last, the low emittance growth rates showed a significant sensitivity to the fluctuation of the Wire Scanner measurements. For this reason, for the low $\CC$ noise levels, long measurement times of about 30-40 minutes were needed.
