--- a/head/abstract.tex
+++ b/head/abstract.tex
@@ -5,6 +5,7 @@
 \addcontentsline{toc}{chapter}{Abstract} % adds an entry to the table of contents
 % put your text here
 
+\textit{"Studies of the emittance growth due to noise in the Crab Cavity RF systems"} by Natalia Triantafyllou.
 
 The High-Luminosity LHC (HL-LHC) is the upgrade of the Large Hadron Collider (LHC) machine which aims to increase significantly the luminosity at the experiments in order to extend its potential for discoveries. Crab Cavities are a key component of the HL-LHC upgrade, as they will be employed to mitigate the luminosity reduction induced by the crossing angle at the interaction points of ATLAS and CMS. An important point to consider is the undesired transverse emittance growth due to noise in the Crab Cavities RF system which can result in luminosity loss. 
 
