--- a/main.tex
+++ b/main.tex
@@ -85,7 +85,7 @@
 {\large Thesis submitted in accordance with the requirements of the University of Liverpool for the degree of Doctor in Philosophy \\ by}
 }
 \author{ Natalia Triantafyllou}
-\date{31 October 2022}
+\date{October 2022}
 \maketitle
 \newpage
 
