--- a/head/abstract.tex
+++ b/head/abstract.tex
@@ -7,9 +7,9 @@
 
 \textit{"Studies of the emittance growth due to noise in the Crab Cavity RF systems"} by Natalia Triantafyllou.
 
-The High-Luminosity LHC (HL-LHC) is the upgrade of the Large Hadron Collider (LHC) machine which aims to increase significantly the luminosity at the experiments in order to extend its potential for discoveries. Crab Cavities are a key component of the HL-LHC upgrade, as they will be employed to mitigate the luminosity reduction induced by the crossing angle at the interaction points of ATLAS and CMS. An important point to consider is the undesired transverse emittance growth due to noise in the Crab Cavities RF system which can result in luminosity loss. 
+The High-Luminosity LHC (HL-LHC) is the upgrade of the Large Hadron Collider (LHC) machine which aims to increase significantly the luminosity at the experiments in order to extend the potential for physics discoveries. Crab Cavities are a key component of the HL-LHC upgrade, as they will be deployed to mitigate the luminosity reduction induced by the crossing angle at the main LHC experiments (ATLAS and CMS). An important point to consider is the undesired transverse emittance growth due to noise in the Crab Cavities RF system, which can result in considerable loss of luminosity.
 
-This thesis explored the mechanisms for emittance growth from Crab Cavity RF noise through numerical simulations and experimental measurements. The studies focused on the Super Proton Synchrotron (SPS) machine where two prototype Crab Cavities were installed in 2018, prior to their installation in the LHC, to be tested for the first time with proton beams. It was found that the beam transverse impedance plays an important role in the emittance growth driven by Crab Cavity RF noise. The measured emittance growth rates are much smaller than predicted from simulations and available theoretical models without including impedance effects. When impedance effects are included in the simulations, the results are in much better agreement with the experiment. The simulations including the machine impedance also demonstrate the dependence of the emittance growth suppression on the tune shift with amplitude, which is another feature consistent with experimental observations. The implications for the HL-LHC are also discussed.
+This thesis explored the mechanisms for emittance growth from Crab Cavity RF noise through numerical simulations and experimental measurements. The studies focused on the Super Proton Synchrotron (SPS) machine, in which two prototype Crab Cavities were installed in 2018, prior to their installation in the LHC, to be tested for the first time with proton beams. It was found that the beam transverse impedance plays an important role in the emittance growth driven by Crab Cavity RF noise. The measured emittance growth rates are much smaller than predicted from simulations and available theoretical models without including impedance effects. When impedance effects are included in the simulations, the results are in much better agreement with the experiment. The simulations including the machine impedance also demonstrate the dependence of the emittance growth suppression on the tune shift with amplitude, which is another feature consistent with experimental observations. The significance of these results and the implications for the HL-LHC are also discussed.
 
 
 
