--- a/appendix/appendix_HT_monitor.tex
+++ b/appendix/appendix_HT_monitor.tex
@@ -1,6 +1,6 @@
-The SPS is equipped with a pick-up of approximately 2\,GHz bandwidth allowing to resolve intra-bunch motion. This instrument is called Head-Tail (HT) monitor and was originally designed for measuring chromaticity and transverse instabilities. However, in the SPS $\CC$ tests, the Head-Tail monitor was the main diagnostic device deployed for the demonstration of the crabbing and the reconstruction of the $\CC$ voltage as experienced by the beam. Its use as a crabbing diagnostic shall be explained here. The methods and procedures described in this section were developed at CERN and are described here for completeness.
+The SPS is equipped with a pick-up of approximately 2\,GHz bandwidth allowing to resolve the intra-bunch motion. This instrument is called Head-Tail (HT) monitor and was originally designed for measuring chromaticity and transverse instabilities. However, in the SPS $\CC$ tests, the Head-Tail monitor was the main diagnostic device deployed for the demonstration of the crabbing and the reconstruction of the $\CC$ voltage as experienced by the beam. Its use as a crabbing diagnostic shall be explained here. The methods and procedures described in this section were developed at CERN and are described here for completeness.
 
-In the first part of this section some general information on the instrument along with example signals will be presented. Subsequently, the post processing of the Head-Tail signal in the presence of the $\CC$ will be discussed. Last, the calibration of the $\CC$ voltage from the Head-Tail data is described and a schematic representation of the "crabbing" is displayed. The term crabbing is used here to describe the z-dependent orbit offset induced by the CC kick. The experimental data presented in this section were acquired on May 30, 2018 (time-stamp: 13:51:05), at the SPS injection energy of 26\,GeV with only one $\CC$, $\CC$1, at phase $\phi_\mathrm{CC}=0$ (this means that a particle at the center of the bunch doesn't recieve any transverse deflection). The energy of 26\,GeV was chosen to provide a better understanding of the methods used as the orbit shift from the $\CC$ kick is stronger and thus more visible than at higher energies.
+In the first part of this section, some general information on the instrument along with example signals will be presented. Subsequently, the post-processing of the Head-Tail signal in the presence of the $\CC$ will be discussed. Last, the calibration of the $\CC$ voltage from the Head-Tail data is described and a schematic representation of the "crabbing" is displayed. The term crabbing is used here to describe the z-dependent orbit offset induced by the CC kick. The experimental data presented in this section were acquired on May 30, 2018 (time-stamp: 13:51:05), at the SPS injection energy of 26\,GeV with only one $\CC$, $\CC$1, at phase $\phi_\mathrm{CC}=0$ (this means that a particle at the center of the bunch doesn't receive any transverse deflection). The energy of 26\,GeV was chosen to provide a better understanding of the methods used as the orbit shift from the $\CC$ kick is stronger and thus more visible than at higher energies.
 
 \section{General information}\label{subsec:HT_general_info}
 The Head-Tail monitor~\cite{sps_headtail_monitor} is a high bandwidth beam position monitor that can measure the transverse displacement within the bunch. It has a resolution of 100\,ps while the length of the bunches is $4\sigma_t \sim $2\,ns~\cite{Carver:2696108}.  This makes it ideal for the measurement of the intra-bunch offset caused from the $\CC$ kick. Its reading consists of the sum ($\Sigma$) and the difference ($\Delta$) of the electrode signals of a straight stripline coupler (Fig.~\ref{fig:SPS_HT_diagram})~\cite{Jones:987561, Levens:2313358} over a defined acquisition period. The sum signal is the longitudinal line density while the difference signal divided by the sum signal corresponds to the intra-bunch offset. The system operates on timescales such that the signals are given as a function of the position within the bunch. The center of the bunch as it passes through the Head-Tail monitor defines $t=0$. 
@@ -35,10 +35,10 @@ The raw signals from the Head-Tail monitor require a specific post-processing pr
 
 
 \section{Post processing in the presence of Crab Cavities}\label{subsec:HT_post_process_CC}
-To obtain useful information from the Head-Tail monitor signal in the presence of the $\CC$s there are a few steps that differ from the standard post processing procedure and they are desribed below.
+To obtain useful information from the Head-Tail monitor signal in the presence of the $\CC$s there are a few steps that differ from the standard post-processing procedure and they are described below.
 
 \subsection{Head-Tail monitor baseline correction}\label{subsec:HT_baseline_correction}
-The Head-Tai monitor measurement has a baseline on the difference signal which needs to be removed. The baseline is a result of orbit offsets and non-linearities of the instrument and is constant from turn to turn~\cite{Levens:2313358}. Therefore, during the normal post processing procedure (without $\CC$s), the baseline is computed as the mean of the difference signals over all turns and then the correction is achieved by subtracting this static offset from the signal of each turn. However, in the SPS tests, where the $\CC$s are well synchronised with the main RF system (Section~\ref{sec:cc_setup}), the crabbing signal is also a static intra-bunch position offset and thus would also be removed with the usual method. Because of technical limitations it was not feasible to switch off the $\CC$ for those kind of measurements. Thus, the following technique was used. 
+The Head-Tai monitor measurement has a baseline on the difference signal which needs to be removed. The baseline is a result of orbit offsets and non-linearities of the instrument and is constant from turn to turn~\cite{Levens:2313358}. Therefore, during the normal post-processing procedure (without $\CC$s), the baseline is computed as the mean of the difference signals over all turns and then the correction is achieved by subtracting this static offset from the signal of each turn. However, in the SPS tests, where the $\CC$s are well synchronised with the main RF system (Section~\ref{sec:cc_setup}), the crabbing signal is also a static intra-bunch position offset and thus would also be removed with the usual method. Because of technical limitations it was not feasible to switch off the $\CC$ for those kind of measurements. Thus, the following technique was used. 
 % CC effect average out over time
 
 For the $\CC$ experiments a reference measurement had first to be made with the $\CC$ not being synchronous with the main RF system. The baseline was computed as the mean of the difference signals over this reference period and subsequently it was subtracted from the average of the difference signals acquired after the synchronisation (Fig~\ref{fig:HT_baseline_correction}). The datasets before and after synchronisation are easily distinguishable in the 2D HT monitor reading as displayed in Fig.~\ref{fig:HT_baseline_correction_measurements_2D}.
@@ -56,7 +56,7 @@ For the $\CC$ experiments a reference measurement had first to be made with the 
 \begin{figure}[!h]
     \centering         
     \includegraphics[width=0.7\textwidth]{images/Ch4/HT_2D__20180530_135105_before_after_sunchronisation_new_version.png}
-        \caption{Head-Tail acquistions before and after the synchronisation of the SPS main RF with the CC.}
+        \caption{Head-Tail acquisitions before and after the synchronisation of the SPS main RF with the CC.}
         \label{fig:HT_baseline_correction_measurements_2D}
  \end{figure}
 
@@ -64,7 +64,7 @@ For the $\CC$ experiments a reference measurement had first to be made with the 
 %At this point, it should be mentioned that the baseline (blue dashed line in Fig.~\ref{fig:HT_baseline_correction}) appears to vary with position within the bunch. The origin for this is not yet understood and will have to be addressed in the future to fully understand .... However, here is our working assumption ...
 
 \normalsize{\textbf{Head-Tail monitor scaling}}\\
-The last step to make the Head-Tail acquisitions meaningful is to convert the measured intra bunch offset (the mean of the difference signals following phase synchronisation and baseline correction) from arbitrary units to millimeters. The scaling is achieved by dividing by the mean of the sum signals (which is a function of the position along the bunch and is calculated for each point individually over many turns) after the synchronisation and with a normalisation factor which is provided by the calibration of the Head-Tail monitor~\cite{PhysRevAccelBeams.22.112803}. The normalisation factor for the SPS was measured at 0.1052 in 2018~\cite{HT_calibration_2018}. Figure~\ref{fig:HT_baseline_correction_crabbing_mm} shows the intra-bunch offset from the $\CC$ kick in millimeters and after the baseline correction. 
+The last step to make the Head-Tail acquisitions meaningful is to convert the measured intra-bunch offset (the mean of the difference signals following phase synchronisation and baseline correction) from arbitrary units to millimeters. The scaling is achieved by dividing by the mean of the sum signals (which is a function of the position along the bunch and is calculated for each point individually over many turns) after the synchronisation and with a normalisation factor which is provided by the calibration of the Head-Tail monitor~\cite{PhysRevAccelBeams.22.112803}. The normalisation factor for the SPS was measured at 0.1052 in 2018~\cite{HT_calibration_2018}. Figure~\ref{fig:HT_baseline_correction_crabbing_mm} shows the intra-bunch offset from the $\CC$ kick in millimeters and after the baseline correction. 
 
 % /eos/user/n/natriant/2018/CC_MD_2018_summary/2018_HT_monitor/MD2_phase_scan_CC1/main_example_135105/plot_1example_HT_acquisition_for_thesis_30May2018-135105_for_thesis_sin_fit_forCh4_fixed_fcc-CC_post_processing_Ch4_3_2_and_after.ipynb
 \begin{figure}[!h]
@@ -82,7 +82,7 @@ The last step to make the Head-Tail acquisitions meaningful is to convert the me
    \Delta y_{,HT} = \frac{\sqrt{\beta_{y, HT}}}{2 \sin(\pi \Qy)} \theta \sqrt{\beta_{y, CC}} \cos(\pi \Qy - \mid \psi_{y, HT} - \psi_{y, CC} \mid),
 \end{equation}
 
-where $\beta_y$ is the beta function, $\Qy$ is the tune, and $\mid \psi_{y, HT} - \psi_{y, CC} \mid$ is the vertical phase advance (in radians) between the $\CC$ and the Head-Tail monitor. The same applies for the horizontal plane. The subscripts Head-Tail and CC indicate quanities at the location of the Head-Tail monitor and CC respectively.
+where $\beta_y$ is the beta function, $\Qy$ is the tune, and $\mid \psi_{y, HT} - \psi_{y, CC} \mid$ is the vertical phase advance (in radians) between the $\CC$ and the Head-Tail monitor. The same applies for the horizontal plane. The subscripts Head-Tail and CC indicate quantities at the location of the Head-Tail monitor and CC respectively.
 
 The $\CC$ voltage experienced by the beam is then reconstructed from the $\CC$ kick which is written as $\theta = - \frac{q V_\mathrm{CC}(t)}{\symE}$, where $q$ is the charge of the particle, $\symE$ the beam energy and $V_\mathrm{CC}(t) = V_\mathrm{CC} \sin(2 \pi \CCfrequency t + \phi_\mathrm{CC}) $ is the voltage that a particle experiences while passing through the $\CC$. In the context where the Head-Tail monitor measures the signal as a function of time, $t$, the voltage in the above formula is expressed accordingly as $V_\mathrm{CC}(t)$, where $t=0$ the center of the bunch as it passes through the Head-Tail monitor.
 
@@ -91,7 +91,7 @@ The $\CC$ voltage experienced by the beam is then reconstructed from the $\CC$ k
 \begin{figure}[!h]
 \centering         
 \includegraphics[width=0.65\textwidth]{images/Ch4/HT_VCC_callibration_20180530_135105_CC_post_processing.png}
-    \caption{CC voltage reconstruction from the HT monitor.}
+    \caption{CC voltage reconstruction from the Head-Tail monitor.}
     \label{fig:VCC_from_HT_monitor_measurement}
 \end{figure}
 
@@ -117,7 +117,7 @@ It should be noted here, that the measured intra-bunch offset, $\Delta y_{, HT}$
       \bottomrule
 	\end{tabu}
    \label{tab:SPS_HT_CC}
-   \end{centering} \footnotesize{$^\ast$ The phase advances are measured from the start of the lattice which is considered the element QF.10010 that is a focusing quadrupole.}
+   \end{centering} \footnotesize{$^\ast$ The phase advances are measured from the start of the lattice which is considered the element QF.10010 which is a focusing quadrupole.}
    \end{minipage}
 \end{table}
 
