--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -34,7 +34,7 @@ As discussed in Section~\ref{subsec:sps_ws}, during each measurement with the Wi
 
 A significant effort was done with the Wire Scanner experts during the emittance growth experiment trying to mitigate this effect without success due to limitations on the hardware of the current instrument that still need to be sorted out. Note that this issue was not observed in the 2018 measurements. A possible explanation is that the wire scanner acquisitions of 2022 provide lower number of points to reconstruct the bunch profiles (compare Figs.~\ref{fig:WS_example_V_profile} against~\ref{fig:WS_example_profiles_V_2022}) increasing the uncertainty of the obtained emittances. The reason behind this, is that between 2018 and 2022 the wire scanners had undergone an upgrade which increased their speed while crossing the bunch. A possible solution to this issue would be to reduce the speed of the wire for the emittance growth experiments in coast mode. This is currently in discussion with the team responsible for the Wire Scanners of the SPS. 
 
-For the the SPS $\CC$ tests in 2022, it was decided that the post-process analysis would be performed taking into account only the IN scan measurements since they appeared to have systematically less fluctuation than in the OUT scan. An example is provided in Fig.~\ref{fig:WS_IN_vs_OUT_2022} where it can be seen that the emittance values obtained from the OUT scan appear to be more fluctuating than the values from the IN scan. In this particular example, this is enhanced in the horizontal plane (blue). It is also clearly visible for the acquisitions during the first half of the coast. Furthermore, the acquisitions from the OUT scans leaded to corruputed profiles more frequenly than the IN scans.
+For the SPS $\CC$ tests in 2022, it was decided that the post-process analysis would be performed taking into account only the IN scan measurements since they appeared to have systematically less fluctuation than in the OUT scan. An example is provided in Fig.~\ref{fig:WS_IN_vs_OUT_2022} where it can be seen that the emittance values obtained from the OUT scan appear to be more fluctuating than the values from the IN scan. In this particular example, this is enhanced in the horizontal plane (blue). It is also clearly visible for the acquisitions during the first half of the coast. Furthermore, the acquisitions from the OUT scans led to corrupted profiles more frequently than the IN scans.
 
 
 %Last, the low emittance growth rates showed a significant sensitivity to the fluctuation of the Wire Scanner measurements. For this reason, for the low $\CC$ noise levels, long measurement times of about 30-40 minutes were needed.
@@ -97,7 +97,7 @@ For the the SPS $\CC$ tests in 2022, it was decided that the post-process analys
 \newpage
  \section{Transverse emittance growth measurements}\label{sec:emittance_growth_2022}
 
-In this section, the individual emittance growth measurements for each coast of the from the SPS $\CC$ tests that were conduced in 2022 are presented.
+In this section, the individual emittance growth measurements for each coast from the SPS $\CC$ tests that were conduced in 2022 are presented.
 
 
  \subsection{Experiment II: sensitivity of emittance growth to amplitude-dependent tune shift}\label{subsec:emittance_growth_2022_exper2}
@@ -225,7 +225,7 @@ In this section, the individual emittance growth measurements for each coast of 
  
 \newpage
  \section{Bunch length measurements}\label{sec:bunch_length_meas_2022}
- The bunch length measurements presented in this section were performed with the Wall Current Monitor (WCM). The WCM acquires the longitudinal bunch profiles which are fitted with a Gaussian function in the post-processing for the evaluation of the bunch length. Each data point shown in the folllowing plots corresponds to the average bunch length value obtained from 100 subsequent acquisitions, while the error bars indicate the standard deviation.
+ The bunch length measurements presented in this section were performed with the Wall Current Monitor (WCM). The WCM acquires the longitudinal bunch profiles which are fitted with a Gaussian function in the post-processing for the evaluation of the bunch length. Each data point shown in the following plots corresponds to the average bunch length value obtained from 100 subsequent acquisitions, while the error bars indicate the standard deviation.
 
  Further details on the WCM that are installed in the CERN Proton Synchrotron (PS) and Large Hadron Collider (LHC) can be found in~\cite{Belleman:2313362, Argyropoulos:2752314}. The device installed in the SPS follows the same working principle. 
 
@@ -373,7 +373,7 @@ The average measured bunch length over the coast was found to be, 4$\sigma_t$=1.
 \newpage
  \section{Intensity measurements}\label{sec:intensity_meas_2022}
 
- The intensity measurements presented in the section were acquired using the  Beam Current Transformer (in particular with the device SPS.BCTDC.41435) which is installed in the SPS machine. The Beam Current Transformer measures the beam induced current in its ferrite core and transforms it to the number of protons per beam. Fruther details on their working principle and operation can be found in~\cite{Jones:1982418, Jakob:624188}.  
+ The intensity measurements presented in the section were acquired using the  Beam Current Transformer (in particular with the device SPS.BCTDC.41435) which is installed in the SPS machine. The Beam Current Transformer measures the beam-induced current in its ferrite core and transforms it to the number of protons per beam. Further details on their working principle and operation can be found in~\cite{Jones:1982418, Jakob:624188}.  
 
 
  \subsection{Experiment I: dependece of emittance growth on CC RF noise power}\label{subsec:2022_exp1_intensity}
